-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 11, 17, 21, 25
-
Component/s: hotspot
-
b26
-
aarch64
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8360878 | 21.0.9-oracle | Erik Ă–sterlund | P2 | Closed | Fixed | b02 |
| JDK-8361078 | 21.0.9 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8361282 | 17.0.17-oracle | Yagmur Eren | P2 | Closed | Fixed | b02 |
| JDK-8361415 | 17.0.17 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8361284 | 11.0.29-oracle | Yagmur Eren | P2 | Closed | Fixed | b02 |
| JDK-8361491 | 8u471 | Yagmur Eren | P2 | Closed | Fixed | b02 |
----------System.out:(4/101)----------
Warmup...
Threads: 2 : 1287 ns per transfer
Threads: 3 : 670 ns per transfer
Threads: 5 :
result: Error. "main" action timed out with a timeout of 960 seconds on agent 6
{
"threadDump": {
"processId": "3976241",
"time": "2025-03-09T04:39:46.650040850Z",
"runtimeVersion": "25-ea+13-LTS-1395",
"threadContainers": [
{
"container": "<root>",
"parent": null,
"owner": null,
"threads": [
{
"tid": "3",
"name": "main",
"stack": [
"java.base\/java.lang.Object.wait0(Native Method)",
"java.base\/java.lang.Object.wait(Object.java:389)",
"java.base\/java.lang.Thread.join(Thread.java:1860)",
"java.base\/java.lang.Thread.join(Thread.java:1936)",
"com.sun.javatest.regtest.agent.MainActionHelper.runClass(MainActionHelper.java:219)",
"com.sun.javatest.regtest.agent.AgentServer.doMain(AgentServer.java:319)",
"com.sun.javatest.regtest.agent.AgentServer.run(AgentServer.java:244)",
"com.sun.javatest.regtest.agent.AgentServer.main(AgentServer.java:71)"
]
},
{
"tid": "11",
"name": "Reference Handler",
"stack": [
"java.base\/java.lang.ref.Reference.waitForReferencePendingList(Native Method)",
"java.base\/java.lang.ref.Reference.processPendingReferences(Reference.java:246)",
"java.base\/java.lang.ref.Reference$ReferenceHandler.run(Reference.java:208)"
]
},
{
"tid": "12",
"name": "Finalizer",
"stack": [
"java.base\/java.lang.Object.wait0(Native Method)",
"java.base\/java.lang.Object.wait(Object.java:389)",
"java.base\/java.lang.Object.wait(Object.java:351)",
"java.base\/java.lang.ref.ReferenceQueue.remove0(ReferenceQueue.java:138)",
"java.base\/java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:229)",
"java.base\/java.lang.ref.Finalizer$FinalizerThread.run(Finalizer.java:165)"
]
},
{
"tid": "13",
"name": "Signal Dispatcher",
"stack": [
]
},
{
"tid": "20",
"name": "Common-Cleaner",
"stack": [
"java.base\/java.lang.Object.wait0(Native Method)",
"java.base\/java.lang.Object.wait(Object.java:389)",
"java.base\/java.lang.ref.ReferenceQueue.remove0(ReferenceQueue.java:124)",
"java.base\/java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:215)",
"java.base\/jdk.internal.ref.CleanerImpl.run(CleanerImpl.java:140)",
"java.base\/java.lang.Thread.run(Thread.java:1447)",
"java.base\/jdk.internal.misc.InnocuousThread.run(InnocuousThread.java:148)"
]
},
{
"tid": "21",
"name": "Notification Thread",
"stack": [
]
},
{
"tid": "188",
"name": "AgentVMThread",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:369)",
"java.base\/java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionNode.block(AbstractQueuedSynchronizer.java:519)",
"java.base\/java.util.concurrent.ForkJoinPool.unmanagedBlock(ForkJoinPool.java:3945)",
"java.base\/java.util.concurrent.ForkJoinPool.managedBlock(ForkJoinPool.java:3891)",
"java.base\/java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await(AbstractQueuedSynchronizer.java:1751)",
"java.base\/java.util.concurrent.CyclicBarrier.dowait(CyclicBarrier.java:236)",
"java.base\/java.util.concurrent.CyclicBarrier.await(CyclicBarrier.java:364)",
"ExchangeLoops.oneRun(ExchangeLoops.java:137)",
"ExchangeLoops.main(ExchangeLoops.java:73)",
"java.base\/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)",
"java.base\/java.lang.reflect.Method.invoke(Method.java:565)",
"com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
},
{
"tid": "196",
"name": "Attach Listener",
"stack": [
"java.base\/java.lang.Thread.getStackTrace(Thread.java:2166)",
"java.base\/jdk.internal.vm.ThreadDumper.dumpThreadToJson(ThreadDumper.java:270)",
"java.base\/jdk.internal.vm.ThreadDumper.dumpThreadsToJson(ThreadDumper.java:242)",
"java.base\/jdk.internal.vm.ThreadDumper.dumpThreadsToJson(ThreadDumper.java:206)",
"java.base\/jdk.internal.vm.ThreadDumper.dumpThreadsToFile(ThreadDumper.java:117)",
"java.base\/jdk.internal.vm.ThreadDumper.dumpThreadsToJson(ThreadDumper.java:85)"
]
}
],
"threadCount": "8"
},
{
"container": "java.util.concurrent.ThreadPoolExecutor@48b50357",
"parent": "<root>",
"owner": null,
"threads": [
{
"tid": "191",
"name": "pool-5-thread-3",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:223)",
"java.base\/java.util.concurrent.Exchanger.xchg(Exchanger.java:397)",
"java.base\/java.util.concurrent.Exchanger.exchange(Exchanger.java:475)",
"ExchangeLoops$Stage.run(ExchangeLoops.java:110)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
},
{
"tid": "192",
"name": "pool-5-thread-4",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:223)",
"java.base\/java.util.concurrent.Exchanger.xchg(Exchanger.java:397)",
"java.base\/java.util.concurrent.Exchanger.exchange(Exchanger.java:475)",
"ExchangeLoops$Stage.run(ExchangeLoops.java:110)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
},
{
"tid": "193",
"name": "pool-5-thread-5",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:223)",
"java.base\/java.util.concurrent.Exchanger.xchg(Exchanger.java:397)",
"java.base\/java.util.concurrent.Exchanger.exchange(Exchanger.java:475)",
"ExchangeLoops$Stage.run(ExchangeLoops.java:102)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
},
{
"tid": "194",
"name": "pool-5-thread-6",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:223)",
"java.base\/java.util.concurrent.Exchanger.xchg(Exchanger.java:397)",
"java.base\/java.util.concurrent.Exchanger.exchange(Exchanger.java:475)",
"ExchangeLoops$Stage.run(ExchangeLoops.java:102)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
},
{
"tid": "195",
"name": "pool-5-thread-7",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.park(LockSupport.java:223)",
"java.base\/java.util.concurrent.Exchanger.xchg(Exchanger.java:397)",
"java.base\/java.util.concurrent.Exchanger.exchange(Exchanger.java:475)",
"ExchangeLoops$Stage.run(ExchangeLoops.java:102)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
}
],
"threadCount": "5"
},
{
"container": "java.util.concurrent.ScheduledThreadPoolExecutor@57e1b0c",
"parent": "<root>",
"owner": null,
"threads": [
{
"tid": "22",
"name": "pool-1-thread-1",
"stack": [
"java.base\/jdk.internal.misc.Unsafe.park(Native Method)",
"java.base\/java.util.concurrent.locks.LockSupport.parkNanos(LockSupport.java:271)",
"java.base\/java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.awaitNanos(AbstractQueuedSynchronizer.java:1802)",
"java.base\/java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.take(ScheduledThreadPoolExecutor.java:1166)",
"java.base\/java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.take(ScheduledThreadPoolExecutor.java:883)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.getTask(ThreadPoolExecutor.java:1016)",
"java.base\/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1076)",
"java.base\/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:614)",
"java.base\/java.lang.Thread.run(Thread.java:1447)"
]
}
],
"threadCount": "1"
},
{
"container": "java.util.concurrent.ThreadPoolExecutor@6c5b45fc",
"parent": "<root>",
"owner": null,
"threads": [
],
"threadCount": "0"
},
{
"container": "ForkJoinPool.commonPool\/jdk.internal.vm.SharedThreadContainer@18d1060b",
"parent": "<root>",
"owner": null,
"threads": [
],
"threadCount": "0"
}
]
}
}
Unclear if it is hung or just slow.
Test flags:
-Dtest.java.opts='-ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:TieredStopAtLevel=1'
- backported by
-
JDK-8361078 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Resolved
-
-
JDK-8361415 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Resolved
-
-
JDK-8360878 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Closed
-
-
JDK-8361282 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Closed
-
-
JDK-8361284 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Closed
-
-
JDK-8361491 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Closed
-
- caused by
-
JDK-8292868 Explicitly pass a third temp register to MacroAssembler::store_heap_oop for aarch64
-
- Resolved
-
- duplicates
-
JDK-8264535 java/util/concurrent/atomic/Serial.java failed with "RuntimeException: Unexpected value after reset"
-
- Closed
-
-
JDK-8282313 java/util/concurrent/tck/JSR166TestCase.java fails testAwaitQuiescence2 test
-
- Closed
-
-
JDK-8350859 java/util/concurrent/ExecutorService/CloseTest.java fails with jtreg timeout
-
- Closed
-
- relates to
-
CODETOOLS-7904034 jcstress: Run with global int/C1/C2 modes even with split compilation
-
- Resolved
-
-
CODETOOLS-7904039 jcstress: Rework Dekker tests to include reference types
-
- Resolved
-
-
CODETOOLS-7904041 jcstress: Amend seqcst tests with reference types
-
- Resolved
-
-
JDK-8357968 RISC-V: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/0e9b1df4
-
Commit(master)
openjdk/jdk21u-dev/729f1005
-
Commit(master)
openjdk/jdk/83b15da2
-
Review(master)
openjdk/jdk17u-dev/3697
-
Review(master)
openjdk/jdk21u-dev/1905
-
Review(master)
openjdk/jdk/25483