8351997: AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent